[gd_scene load_steps=10 format=2]

[ext_resource path="res://npcs/monster_icon1.png" type="Texture" id=1]
[ext_resource path="res://ui/theme/monster_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/monster_ui.gd" type="Script" id=3]
[ext_resource path="res://sfx/eat.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -134.0
margin_top = -48.0

[node name="Control2" type="Button" parent="HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Face" type="TextureRect" parent="HBoxContainer/Control2"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 52.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 2 )
text = "100%"
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="FeedMe" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -80.0
custom_fonts/font = ExtResource( 2 )
text = "Give me food"

[node name="NotFood" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -216.0
margin_top = -80.0
custom_fonts/font = ExtResource( 2 )
text = "That's not food"

[node name="NoItem" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -303.0
margin_top = -80.0
custom_fonts/font = ExtResource( 2 )
text = "Not holding anything"

[node name="Yes" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -163.0
margin_top = -80.0
custom_fonts/font = ExtResource( 2 )
text = "yes yes yes"

[node name="NoFood" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -328.0
margin_top = -80.0
custom_fonts/font = ExtResource( 2 )
text = "You don't have any food"

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="mouse_entered" from="HBoxContainer/Control2" to="." method="_on_Control2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Control2" to="." method="_on_Control2_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Control2" to="." method="_on_Control2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
